Mise à jour CI pour Thymeleaf